server/src/main/assets/stylesheets/main.less
/* ... */
.date-quick-days {
  white-space: nowrap;
}

.date-quick-days div {
  flex-grow: 1;
}

.time-machine {
  display: flex;
  gap: 20px;
}

.time-machine-info {
  text-align: right;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.flex-uniform-size {
  display: flex;
  width: 100%;
  gap: 8px;
  flex: 1;
  justify-content: space-between;
}

.not-live-banner {
  background-color: #ffaaaa;
  border-radius: 10px;
  padding: 10px;
  font-weight: bold;
  text-align: center;
  font-size: large;
  display: inline-block;
}

.not-live-message {
  display: flex;
  align-items: center;
  gap: 10px;
  margin-top: 15px;
  font-size: 18px;
}

.time-machine-display-date {
  font-weight: bold;
}

.time-machine-hint-v2 {
  width: 250px;
  display: flex;
  justify-content: flex-end;
  align-items: center;
  gap: 15px;
  background-color: #c9dec9;
  border-radius: 5px;
  padding: 5px;
}

.time-machine-datetime-selector {
  font-size: large;
  line-height: normal;
}

.date-picker {
  display: flex;
  gap: 10px;
  flex-grow: 1;
}

.time-view-selector-container {
  display: flex;
  justify-content: flex-start;
  gap: 20px;
  flex-wrap: wrap;
}

.time-view-selector-container .time-range {
  display: flex;
  justify-content: flex-start;
  flex-wrap: nowrap;
  align-items: center;
  gap: 5px;
}

.staffing-controls-wrapper {
  display: flex;
  flex-direction: column;
  gap: 15px;
}

.staffing-controls-row {
  display: flex;
  gap: 15px;
  align-items: center;
}

.staffing-controls-label {
  width: 200px;
}

.staffing-controls-select {
  width: 200px;
}

.staffing-table {
  margin-top: 15px;
}

.pcp-pax-summaries {
  display: flex;
  justify-content: space-evenly;
  min-height: 228px;
  gap: 10px;
  margin-bottom: 15px;
}

.pcp-pax-summary {
  padding: 5px;
}

.pcp-pax-summary .total {
  font-size: 48px;
  font-weight: bold;
  text-align: center;
}

.pcp-pax-summary .queues {
  text-align: center;
  margin-left: 10px;
}

.pcp-pax-summary .queues .queue {
  float: left;
  width: 48%;
}

.pcp-pax-summary .queues .queue div {
  margin: 1px;
  font-size: 18px;
  background-color: #eee;
  display: table;
  width: 94%;
}

.queue-boxes {
  font-size: 20px;
  @media (max-width: 800px) {
    font-size: 1.75rem;
  };
  display: flex;
  justify-content: space-between;
  gap: 25px;
}

.pcp-pax-summary .queues .queue .queue-name div {
  height: 56px;
  vertical-align: middle;
  display: table-cell;
}

.pcp-pax-summary .queues .queue .queue-pax div {
  height: 36px;
  vertical-align: middle;
  display: table-cell;
  width: 70px;
}

.pcp-pax-summary .vertical-spacer {
  clear: both;
}

.pcp-pax-summary .time-range {
  clear: both;
  margin-top: 5px;
  text-align: center;
  font-size: 15px;
  color: #bbb;
}

.pcp-pax-summary .time-range-label {
  text-align: center;
  font-size: 20px;
  margin-top: 10px;
}

.pcp-pax-summary.b0 {
  background-color: #0B0C0C;
  color: #fff;
}

.pcp-pax-summary.b1 {
  background-color: #6F777B;
  color: #fff;
}

.pcp-pax-summary.b2 {
  background-color: #BFC1C3;
  color: #000;
}

.pcp-pax-summary.b3 {
  background-color: #EEEFF0;
  color: #000;
}

.pcp-pax-summary.b2 .time-range, .pcp-pax-summary.b3 .time-range {
  color: #333;
}

.pcp-pax-summary.b0 .queues .queue div {
  background-color: #242525;
}

.pcp-pax-summary.b1 .queues .queue div {
  background-color: #7E8588;
}

.pcp-pax-summary.b2 .queues .queue div {
  background-color: #CCCDCF;
}

.pcp-pax-summary.b3 .queues .queue div {
  background-color: #FAFAFB;
}

.queue-pax {
  display: flex;
  justify-content: flex-start;
  flex-direction: column;
  gap: 0px;
}

.arrivals_table__splits__queue-pax {
  min-width: 60px;
  text-align: left;
  margin-bottom: 8px;
}

// Usage table

.usage-table {
  min-height: 1px;
  overflow-x: auto;
  -webkit-overflow-scrolling: touch;

  td, th {
    line-height: 1.4;
    vertical-align: top;
  }
}

// cell types
.usage-table__prop {
  color: #266d90;
  font-family: @font-family-monospace;
  font-size: 90%;
}

.usage-table__type,
.usage-table__default {
  color: @gray-light;
  font-family: @font-family-monospace;
  font-size: 90%;
}

.usage-table__type {
  color: #bf2a5c;
}

.usage-table__description {
  min-width: 200px;
}

.terminal-desk-recs-container {
  height: 800px;
}

table.user-desk-recs tbody tr td.table-danger {
  background-color: @slaBreach;
  color: #ffffff;
}

table.user-desk-recs tbody tr:nth-child(odd) > td.table-danger {
  background-color: lighten(@slaBreach, 5%);
}

.minutes {
  text-align: right;
}

th h2 {
  margin-top: 0.5em;
}

.staffing-editor {
  width: 100%;
  height: 200px;
}

.data-quality {
  border: 1px solid #404252;
  padding: 4px 8px 4px 8px;
  font-weight: 400;
  text-align: left;
}

.data-quality > span {
  min-width: 80px;
  display: flex;
  gap: 5px;
  justify-content: space-between;
}

.data-quality__more-info {
  color: #404252;
  font-size: 18px;
}

.tippy-info-icon {
  display: block;
}

.nav-tabs li a {
  display: flex !important;
  gap: 8px;
}

.data-quality__more-info svg, .tippy-info-icon svg {
  display: block;
}

.MuiTooltip-popper {
  font-size: 20px !important;
}

.data-quality__info {
  background-color: #f3f5f9;
  color: #404252;
}

.data-quality__success {
  background-color: #f3f9de;
  color: #2F4500;
}

.data-quality__warning {
  background-color: #fff2e1;
  color: #873200;
}

.data-quality__error {
  background-color: #ffebee;
  color: #99001E;
}

@pax-bar-height: 20px;

@reliability-low: #ff9999;
@reliability-medium: #efc626;
@reliability-quite-high: #cbef7c;
@reliability-high: rgba(13, 182, 36, 0.7);

.pax-bar {
  height: @pax-bar-height;
}

.pax-capacity {
  height: 0px;
  border-bottom: solid 1px #9c9c9c;
}

.pax {
  position: absolute;
  top: 0;
  left: 0;
}

/* summary-boxes */
.summary-boxes {
  height: 90px;
}

.summary-box-container {
  display: inline-block;
  height: 150px;
  background-color: #dddddd;
  padding: 5px 5px 5px 5px;
  margin: 5px 5px 5px 5px;
  min-width: 145px;
}
/* ... */

